talks: fix layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ blockquote {
   border-style: solid;
   border-width: 1px;
   border-color: #999;
-  background-color:  #eee;
+  background-color: #eee;
 }
 
 h1, h2, h3 {
@@ -103,7 +103,6 @@ h1 a, h2 a, h3 a {
   text-decoration: none;
 }
 
-
 #site-name a {
   text-decoration: none;
 }
@@ -171,4 +170,9 @@ ul, ol, img, .highlight, blockquote {
   list-style: none;
   margin-left: 0;
   margin-right: 0;
+}
+
+.talks iframe {
+  padding-left: 1em;
+  padding-right: 1em;
 }
